CocoR/DARFormula.atg
$namespace=ElaroSolutions::DARFormula

COMPILER DARFormula

CHARACTERS
  letter     = 'a'..'z'+'A'..'Z'.
  digit      = '0'..'9'.
  hexdigit   = digit + "ABCDEF".
  octdigit   = '0'..'7'.
  bindigit   = "01".
  eol        = '\n'.

TOKENS
  variable   = (letter { letter | digit | '_' }).
  data       = "data".
  sin        = "sin".
  cos        = "cos".
  tan        = "tan".
  asin       = "asin".
  acos       = "acos".
  atan       = "atan".
  sinh       = "sinh".
  cosh       = "cosh".
  tanh       = "tanh".
  log        = "log".
  ln         = "ln".
  sqrt       = "sqrt".
  ceil       = "ceil".
  floor      ="floor".
  abs        ="abs".
  sum        = "sum".
  mult       = "mult".
  number     = digit {digit} ['.' digit {digit}]
             | "0x" hexdigit {hexdigit} ['.' hexdigit {hexdigit}]
             | "0o" octdigit {octdigit} ['.' octdigit {octdigit}]
             | "0b" bindigit {bindigit} ['.' bindigit {bindigit}].
  comp       = '=' | "!=" | '>' | '<'.
  plus       = '+'.
  minus      = '-'.
  muldivmod  = '*' | '/' | '%'.
  exp        = '^'.
  comma      = ','.
  leftparen  = '('.
  rightparen = ')'.
  leftbrack  = '['.
  rightbrack = ']'.
  colon      = ':'.

  COMMENTS FROM '#' TO eol

  IGNORE ' ' + '\t'

  PRODUCTIONS

  DARFormula             (. Node *e=nullptr;.)
  = 
    Formula <e>
  .

  Formula <Node *e>     (. BinaryFunctions op = (BinaryFunctions)Undefined;
                           Node *e2=nullptr;.)
  =
    Expression <e>
    {comp               (. if(t->val==(wchar_t*)"=")
                           {op = Equals;}
                           else if(t->val==(wchar_t*)"!=")
                           {op = Unequals;}
                           else if(t->val==(wchar_t*)"<")
                           {op = Lesser;}
                           else if(t->val==(wchar_t*)">")
                           {op = Greater;}
                        .)
    Expression <e2>    (. e = BinaryNode::BinaryNodeConstructor(e,e2,op); .)
    }  
  .
  
  Expression <Node *e> (.BinaryFunctions op = (BinaryFunctions)Undefined;
                         Node *e2=nullptr;.)
  = 
    Term <&e>
    {(
      plus             (. op = Plus; .)
      |minus           (. op = Minus; .)
      )         
      Term <e2>       (. e = BinaryNode::BinaryNodeConstructor(e,e2,op); .)
    }
  . 
  
  Term <Node *e>      (.BinaryFunctions op = (BinaryFunctions)Undefined; 
                        Node *e2=nullptr;.)
  = 
    Factor <e>
    {muldivmod        (.if(t->val==(wchar_t*)"*")
                           {op = Times;}
                        else if(t->val==(wchar_t*)"/")
                           {op = Divide;}
                        else if(t->val==(wchar_t*)"%")
                           {op = Modulo;}
                      .)       
    Factor <e2>      (. e = BinaryNode::BinaryNodeConstructor(e,e2,op); .)
    }
  .
  
  Factor <Node *e>    
  = 
    PossiblyNegatedOperand <e>
    {exp PossiblyNegatedOperand <e2> (. e = BinaryNode::BinaryNodeConstructor(e,e2, Exponent); .)
    }
  . 
  
  PossiblyNegatedOperand <Node *e>    (. bool isNegated = false; .)
  =
    [minus                            (. isNegated = true; .)
    ] Operand <e>                    (. if(isNegated){e = UnaryNode::UnaryNodeConstructor(e,Negate); }.)
  .


  Operand <Node *e>
  = 
    Quantity <e>
    | (. UnaryFunctions op=(UnaryFunctions)Undefined;.) 
         Func <op> leftparen Formula <e> rightparen (. e = UnaryNode::UnaryNodeConstructor(e,op);.)
    | (. TernaryFunctions op=Undefined;
         std::string countingVariable; 
         Node *lim;.) 
         Func3 <op> leftparen variable (. countingVariable.append((const char *)t->val); .) comma Formula <lim> comma Formula <e> rightparen  (. e = TernaryNode::TernaryNodeConstructor(countingVariable,lim,e,op); .)
    | leftparen Formula <e> rightparen
  .
  
  Func <UnaryFunctions op>                        
  =
    (sin|cos|tan|asin|acos|atan|sinh|cosh|tanh|log|ln|sqrt|ceil|floor|abs)
                               (. op = t->kind; .)
  .
  
  Func3 <TernaryFunctions op>    
  = 
    (sum| mult)                (. op = t->kind;.)  
  .

  Quantity <SimpleNode *e> 
  = 
    Data <e>
    | variable                 (. e = new VariableNode(std::string((const char *)t->val),variables).)   
    | number                   (. e = new ValueNode((double)std::atof((const char *)t-val));.) 
  .

  Data <DataNode *e>           (. vector<Node*> *indexes = new vector<Node*>();
                                  std::string fieldName = "";
                                  Node *e1=nullptr;
                                  Node *e2=nullptr; .)
  =
    data leftbrack Formula <e1> rightbrack (. indexes.push_back(e1); .)
    {
      leftbrack Formula <e2> rightbrack   (. indexes.push_back(e2); .)
    }
    [colon variable (. fieldName.append((const char *)t->val); .)
    ]           
                               (. e = new DataNode(*indexes, fieldName);.)
  .

END DARFormula.
